--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		          <div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
 		          	<div class="text">
 		          		<span class="subheading">Hello!</span>
-			            <h1 class="mb-4 mt-3">I'm <span>Mehdi Jarraya</span></h1>
+			            <h1 class="mb-4 mt-3">I'm <span>Mehdi</span></h1>
 			            <h2 class="mb-4">A Freelance Full-Stack Developer</h2>
 			            <p><a href="#" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
 		            </div>
@@ -93,7 +93,8 @@
     			<div class="col-md-6 col-lg-5 d-flex">
     				<div class="img-about img d-flex align-items-stretch">
     					<div class="overlay"></div>
-	    				<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/bg_1.png);">
+						<!-- <div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/bg_1.png);"> -->
+							<div class="distortion" > </div>
 	    				</div>
     				</div>
     			</div>
@@ -623,6 +624,9 @@
   <script src="js/scrollax.min.js"></script>
   
   <script src="js/main.js"></script>
-    
-  </body>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js" integrity="sha256-lPE3wjN2a7ABWHbGz7+MKBJaykyzqCbU96BJWjio86U=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/106/three.min.js" integrity="sha256-tAVw6WRAXc3td2Esrjd28l54s3P2y7CDFu1271mu5LE=" crossorigin="anonymous"></script>  
+<script src="./js/hover.js"></script>
+<script src="./js/app.js"></script>
+</body>
 </html>
