--- a/index.html
+++ b/index.html
@@ -142,20 +142,22 @@
     					<span class="date">2014-2017</span>
     					<h2>Engineering Degree</h2>
     					<span class="position">ESPRIT University</span>
-    					<p class="mt-4">Engineering degree with a very good grade from the Private High School of Engineering and Technology (ESPRIT).</p>
+    					<p class="mt-4">Engineering degree with a 
+							<a href="#" class="keyword">very good grade</a>
+							 from the Private High School of Engineering and Technology (ESPRIT).</p>
     				</div>
     				<div class="resume-wrap ftco-animate">
     					<span class="date">From December 2019</span>
     					<h2>Full-Stack Developer</h2>
     					<span class="position">Wevioo Company</span>
-    					<p class="mt-4">Design and Development of web and mobile applications like IOM platform for managing motorcycle courses "Isle of Man TT"
-							and the mobile version of "GLPI".</p>
+    					<p class="mt-4">Design and Develop web and mobile applications like IOM to manage "Isle of Man TT" races with <a href="#" class="keyword">React.js</a> 
+							and the mobile version of "GLPI" with <a href="#" class="keyword">Ionic</a> and <a href="#" class="keyword">Nest.js</a>.</p>
 					</div>
 					<div class="resume-wrap ftco-animate">
     					<span class="date">Janury - July 2017</span>
     					<h2>Full-Stack Developer Internship</h2>
     					<span class="position">Kawami Company</span>
-    					<p class="mt-4">CareWays is a medical tourism application developed in Android and IOS.
+    					<p class="mt-4">CareWays is a medical tourism platform developed with <a href="#" class="keyword">Fuse</a> and <a href="#" class="keyword">Node.js</a>.
 							 It allows patients to take part in a whole process from booking treatments to sharing medical records and live chat with hospitals staffs.
 							  It enables online consultations with doctors and allows nurses to manage hospital events.</p>
     				</div>
@@ -173,13 +175,13 @@
     					<h2>Development Tech Leader</h2>
     					<span class="position">IT.Grapes Company</span>
     					<p class="mt-4">I was responsible for the development and managing of many projects such as Seabex,
-							 Ubways and other ministry projects with React.js and React Native.</p>
+							 Ubways and other ministry projects with <a href="#" class="keyword">React.js</a> and <a href="#" class="keyword">React Native</a>.</p>
     				</div>
     				<div class="resume-wrap ftco-animate">
     					<span class="date">July - August 2016</span>
     					<h2>Front-End Developer Internship</h2>
     					<span class="position">Argania Company</span>
-    					<p class="mt-4">Argania Recensement is a project developed in Argania company. It consists of an Android application for Argania commercials to geolocate the new customers and a Web application 
+    					<p class="mt-4">Argania Recensement is a project developed in Argania company. It consists of an <a href="#" class="keyword">Android</a> application for Argania commercials to geolocate the new customers and a Web application 
 							for Argania supervisors to manage those customers.</p>
     				</div>
     			</div>
