Card hover done

--- a/index.html
+++ b/index.html
@@ -23,8 +23,6 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
-	  
-	  
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
 	    <div class="container">
 	      <a class="navbar-brand" href="index.html">Mehdi</a>
@@ -412,7 +410,44 @@
     			</div>
     		</div>
     	</div>
-    </section>
+	</section>
+	
+<!-- Card Hover Animation -->
+		<main class="page-content">
+			<div class="card">
+			  <div class="content">
+				<h2 class="title">IOM</h2>
+				<p class="copy">Check out all of these gorgeous mountain trips with beautiful views of, you guessed it, the mountains</p>
+				<!-- <button class="btn">View Trips</button> -->
+				<a href="https://www.iomtt.com/" class="button btn">View app</a>
+			  </div>
+			</div>
+			<div class="card">
+			  <div class="content">
+				<h2 class="title">SEABEX</h2>
+				<p class="copy">Plan your next beach trip with these fabulous destinations</p>
+				<!-- <button class="btn">View Trips</button> -->
+				<a href="https://seabex.com/#!/up" class="button btn">View app</a>
+			  </div>
+			</div>
+			<div class="card">
+			  <div class="content">
+				<h2 class="title">Tunisian Recipe</h2>
+				<p class="copy">It's the desert you've always dreamed of</p>
+				<!-- <button class="btn">Book Now</button> -->
+				<!-- href styled like a button add -> button class  -->
+				<a href="https://androidappsapk.co/detail-recette-tunisienne/?fbclid=IwAR34w6-bgqU4vu_ki502LtcckyecZSQaJ1wH4gk_U2WzxWRrW78Ey8HxlK4" class="button btn">View app</a>
+			  </div>
+			</div>
+			<div class="card">
+			  <div class="content">
+				<h2 class="title">Speed Bump in Tunisia</h2>
+				<p class="copy">Seriously, straight up, just blast off into outer space today</p>
+				<a href="https://appadvice.com/app/dos-dane-tunisie/1080214242" class="button btn">View app</a>
+			</div>
+			</div>
+		  </main>
+		  <!-- Card Hover Animation -->
 
     <section class="ftco-section ftco-no-pt ftco-no-pb ftco-counter img" id="section-counter">
     	<div class="container">
@@ -626,6 +661,6 @@
   <script src="js/scrollax.min.js"></script>
   
   <script src="js/main.js"></script>
-    
+<script src="js/app.js"></script>
   </body>
 </html>
