Implement and adapt form

--- a/index.html
+++ b/index.html
@@ -578,6 +578,40 @@
       </div>
     </section>
 		
+<!-- adding conctact form formation -->
+	<section class="ftco-section contact-section ftco-no-pb" id="contact-section">
+		<div class="container">
+			<div class="book">
+				<div class="book__form">
+					<form action="#" class="form">
+
+						<div class="form__group">
+							<input type="text" class="form__input" placeholder="Full name" id="name" required>
+							<label for="name" class="form__label">Full name</label>
+						</div>
+
+						<div class="form__group">
+							<input type="email" class="form__input" placeholder="Email address" id="email" required>
+							<label for="email" class="form__label">Email address</label>
+						</div>
+
+						<div class="form__group">
+							<input type="text" class="form__input" placeholder="Subject" id="subject" required>
+							<label for="subject" class="form__label">Subject</label>
+						</div>
+
+						<div class="form__group">
+							<textarea name="message" id="" cols="30" rows="6" class="form__input" placeholder="Message"></textarea>
+							<label for="Message" class="form__label">Message</label>
+						</div>
+
+
+						<a><a href="#" class="btnAnimated btnAnimated--yellow form__group">submit</a></a>
+					</form>
+				</div>
+			</div>
+		</div>
+	</section>
 
     <footer class="ftco-footer ftco-section">
       <div class="container">
