form design done

--- a/index.html
+++ b/index.html
@@ -605,17 +605,10 @@
 							<textarea name="message" id="" cols="30" rows="6" class="form__input" placeholder="Message"></textarea>
 							<label for="Message" class="form__label">Message</label>
 						</div>
-
-	
-
-						<a type="submit" href="#" class="btnAnimated btnAnimated--yellow btn">Download CV</a>
-
 						<div class="form-group">
-							<input type="submit" value="Send Message" class="btnAnimated btnAnimated--yellow">
-						  </div>
-
-
-						<button class="submit-button state-0 "><span class="pre-state-msg">Submit</span><span class="current-state-msg hide">Sending...</span><span class="done-state-msg hide">Done!</span></button>
+						<button class="submit-button submit-button--yellow"><span class="pre-state-msg">Submit</span><span class="current-state-msg hide">Sending...</span><span class="done-state-msg hide">Done!</span></button>
+					
+					</div>
 					</form>
 		
 				</div>
