changing icon generate folder from flatIcon and replace IT

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
 
     <link rel="stylesheet" href="css/ionicons.min.css">
     
-    <link rel="stylesheet" href="css/flaticon.css">
+	<link rel="stylesheet" href="css/flaticon.css">
+	
+	<link rel="stylesheet" type="text/css" href="./fonts/flaticonmehdi/font/flaticon.css">
+
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
@@ -206,38 +209,17 @@
 					<div class="col-md-4 text-center d-flex ftco-animate">
 						<a href="#" class="services-1">
 							<span class="icon">
-								<i class="flaticon-analysis"></i>
-							</span>
-							<div class="desc">
-								<h3 class="mb-5">Web Design</h3>
-							</div>
-						</a>
-					</div>
-					<div class="col-md-4 text-center d-flex ftco-animate">
-						<a href="#" class="services-1">
-							<span class="icon">
-								<i class="flaticon-flasks"></i>
-							</span>
-							<div class="desc">
-								<h3 class="mb-5">Branding</h3>
-							</div>
-						</a>
-					</div>
-					<div class="col-md-4 text-center d-flex ftco-animate">
-						<a href="#" class="services-1">
-							<span class="icon">
-								<i class="flaticon-ideas"></i>
+								<i class="flaticon-web"></i>
 							</span>
 							<div class="desc">
 								<h3 class="mb-5">Web Development</h3>
 							</div>
 						</a>
 					</div>
-
 					<div class="col-md-4 text-center d-flex ftco-animate">
 						<a href="#" class="services-1">
 							<span class="icon">
-								<i class="flaticon-analysis"></i>
+								<i class="flaticon-code"></i>
 							</span>
 							<div class="desc">
 								<h3 class="mb-5">Mobile Development</h3>
@@ -247,17 +229,38 @@
 					<div class="col-md-4 text-center d-flex ftco-animate">
 						<a href="#" class="services-1">
 							<span class="icon">
-								<i class="flaticon-flasks"></i>
+								<i class="flaticon-code-1"></i>
 							</span>
 							<div class="desc">
 								<h3 class="mb-5">Backend Development</h3>
 							</div>
 						</a>
 					</div>
+
 					<div class="col-md-4 text-center d-flex ftco-animate">
 						<a href="#" class="services-1">
 							<span class="icon">
-								<i class="flaticon-ideas"></i>
+								<i class="flaticon-computer-graphic"></i>
+							</span>
+							<div class="desc">
+								<h3 class="mb-5">Web Design</h3>
+							</div>
+						</a>
+					</div>
+					<div class="col-md-4 text-center d-flex ftco-animate">
+						<a href="#" class="services-1">
+							<span class="icon">
+								<i class="flaticon-price-tag"></i>
+							</span>
+							<div class="desc">
+								<h3 class="mb-5">Branding</h3>
+							</div>
+						</a>
+					</div>
+					<div class="col-md-4 text-center d-flex ftco-animate">
+						<a href="#" class="services-1">
+							<span class="icon">
+								<i class="flaticon-file-storage"></i>
 							</span>
 							<div class="desc">
 								<h3 class="mb-5">Devops</h3>
@@ -592,7 +595,7 @@
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
           	<div class="align-self-stretch box p-4 text-center">
           		<div class="icon d-flex align-items-center justify-content-center">
-          			<span class="icon-globe"></span>
+          			<span class="icon-github"></span>
           		</div>
           		<h3 class="mb-4">Website</h3>
 	            <p><a href="https://github.com/MehdiJarraya">Github</a></p>
@@ -675,9 +678,9 @@
               <h2 class="ftco-heading-2">About</h2>
               <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
+                <li class="ftco-animate"><a href="#"><span class="icon-linkedin"></span></a></li>
                 <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+                <li class="ftco-animate"><a href="#"><span class="icon-github"></span></a></li>
               </ul>
             </div>
           </div>
