--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		          <div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
 		          	<div class="text">
 		          		<span class="subheading">Hello!</span>
-			            <h1 class="mb-4 mt-3">I'm <span>Mehdi Jarraya</span></h1>
+			            <h1 class="mb-4 mt-3">I'm <span>Mehdi</span></h1>
 			            <h2 class="mb-4">A Freelance Full-Stack Developer</h2>
 						<p><a href="#" class="btnAnimated btnAnimated--yellow">Hire me</a> 
 							<a href="#" class="btnAnimated btnAnimated--white">My works</a></p>
