contact textHover yellow

--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
           			<span class="icon-phone2"></span>
           		</div>
           		<h3 class="mb-4">Contact Number</h3>
-	            <p><a href="tel://+21653366536">+216 53 366 536</a></p>
+	            <p><a class="textHoverYellow" href="tel://+21653366536">+216 53 366 536</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -492,16 +492,17 @@
           			<span class="icon-paper-plane"></span>
           		</div>
           		<h3 class="mb-4">Email Address</h3>
-	            <p><a href="mailto:mehdi.jarraya@gmail.com">mehdi.jarraya@gmail.com</a></p>
+	            <p><a class="textHoverYellow" href="mailto:mehdi.jarraya@gmail.com">mehdi.jarraya@gmail.com</a></p>
 	          </div>
-          </div>
+		  </div>
+		  
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
           	<div class="align-self-stretch box p-4 text-center">
           		<div class="icon d-flex align-items-center justify-content-center">
           			<span class="icon-github"></span>
           		</div>
-          		<h3 class="mb-4">Website</h3>
-	            <p><a href="https://github.com/MehdiJarraya">Github</a></p>
+          		<h3 class="mb-4">Github</h3>
+	            <p><a class="textHoverYellow" href="https://github.com/MehdiJarraya">MehdiJarraya</a></p>
 	          </div>
           </div>
         </div>
