setting heruko url done

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 	                <span class="number" data-number="120">0</span>
 	                <span>Project complete</span>
                 </p>
-                <p><a href="#" class="btnAnimated btnAnimated--yellow">Download CV</a></p>
+                <p><a href="https://portfoliobackk.herokuapp.com/download" class="btnAnimated btnAnimated--yellow">Download CV</a></p>
               </div>
 	          </div>
 	        </div>
@@ -190,7 +190,7 @@
     		</div>
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="#" class="btnAnimated btnAnimated--yellow">Download CV</a></p>
+    				<p><a href="https://portfoliobackk.herokuapp.com/download" class="btnAnimated btnAnimated--yellow">Download CV</a></p>
     			</div>
     		</div>
     	</div>
