add card hover desription

--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
 					<div class="card">
 					  <div class="content">
 						<h2 class="title">IOM</h2>
-						<p class="copy">Check out all of these gorgeous mountain trips with beautiful views of, you guessed it, the mountains</p>
+						<p class="copy">React.js app for managing "Isle of Man TT" races</p>
 						<!-- <button class="btn">View Trips</button> -->
 						<a href="https://www.iomtt.com/" class="button btn">View app</a>
 					  </div>
@@ -379,7 +379,7 @@
 					<div class="card">
 					  <div class="content">
 						<h2 class="title">SEABEX</h2>
-						<p class="copy">Plan your next beach trip with these fabulous destinations</p>
+						<p class="copy">React.js and React Native app for Seabex system</p>
 						<!-- <button class="btn">View Trips</button> -->
 						<a href="https://seabex.com/#!/up" class="button btn">View app</a>
 					  </div>
@@ -387,7 +387,7 @@
 					<div class="card">
 					  <div class="content">
 						<h2 class="title">Tunisian Recipe</h2>
-						<p class="copy">It's the desert you've always dreamed of</p>
+						<p class="copy">Android application for cooking Tunisian recipes</p>
 						<!-- <button class="btn">Book Now</button> -->
 						<!-- href styled like a button add -> button class  -->
 						<a href="https://androidappsapk.co/detail-recette-tunisienne/?fbclid=IwAR34w6-bgqU4vu_ki502LtcckyecZSQaJ1wH4gk_U2WzxWRrW78Ey8HxlK4" class="button btn">View app</a>
@@ -396,7 +396,7 @@
 					<div class="card">
 					  <div class="content">
 						<h2 class="title">Speed Bump in Tunisia</h2>
-						<p class="copy">Seriously, straight up, just blast off into outer space today</p>
+						<p class="copy"> Android and IOS app to alert users from speed bumps</p>
 						<a href="https://appadvice.com/app/dos-dane-tunisie/1080214242" class="button btn">View app</a>
 					</div>
 					</div>
