--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
           <div class="col-md-7 heading-section text-center ftco-animate">
             <h1 class="big big-2">Contact</h1>
             <h2 class="mb-4">Contact Me</h2>
-            <p>You can contact using the information below.</p>
+            <p>You can contact me using the information below.</p>
           </div>
         </div>
 
