adding Linkedin fb and github link

--- a/index.html
+++ b/index.html
@@ -547,9 +547,9 @@
               <h2 class="ftco-heading-2">About</h2>
               <p>Software engineer passionate about programming mobile and web applications.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-                <li class="ftco-animate"><a href="#"><span class="icon-linkedin"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-github"></span></a></li>
+                <li class="ftco-animate"><a href="https://www.linkedin.com/in/mehdi-jarraya-b198aba7/"><span class="icon-linkedin"></span></a></li>
+                <li class="ftco-animate"><a href="https://www.facebook.com/mehdi.jarraya"><span class="icon-facebook"></span></a></li>
+                <li class="ftco-animate"><a href="https://github.com/MehdiJarraya"><span class="icon-github"></span></a></li>
               </ul>
             </div>
           </div>
