replacing IOM with WADAOO

--- a/index.html
+++ b/index.html
@@ -366,13 +366,20 @@
     		<div class="row">
 				<main class="page-content">
 					<div class="card">
+						<div class="content">
+						  <h2 class="title">WADAPP</h2>
+						  <p class="copy">IONIC app for managing and tracking employees requests</p>
+						  <!-- <button class="btn">View Trips</button> -->
+						  <a href="https://play.google.com/store/apps/details?id=io.wadapp.starter" class="button btn">View app</a>
+						</div>
+					  </div>
+					<!-- <div class="card">
 					  <div class="content">
 						<h2 class="title">IOM</h2>
 						<p class="copy">React.js app for managing "Isle of Man TT" races</p>
-						<!-- <button class="btn">View Trips</button> -->
 						<a href="https://www.iomtt.com/" class="button btn">View app</a>
 					  </div>
-					</div>
+					</div> -->
 					<div class="card">
 					  <div class="content">
 						<h2 class="title">SEABEX</h2>
