--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 							<div class="text">
 								<span class="subheading">Hello!</span>
 								<h1 class="mb-4 mt-3">I'm <span>Mehdi</span></h1>
-								<h2 class="mb-4">A Freelance Full-Stack Developer</h2>
+								<h2 class="mb-4">A Full-Stack Developer</h2>
 								<!-- <p><a href="#contact-section" class="nav-link btnAnimated btnAnimated--yellow">Hire me</a> 
 							<a href="#projects-section" class="nav-link btnAnimated btnAnimated--white">My works</a></p> -->
 							</div>
@@ -399,13 +399,13 @@
 
 				<div class="col-md-8">
 					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-						style="background-image: url(images/IOM5.jpg);">
+						style="background-image: url(images/pc.png);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
 							<!-- https://www.iomttraces.com/ -->
 							<!-- https://www.iomtt.com/ -->
-							<h3><a href="https://www.iomttraces.com/">IOM Races</a></h3>
-							<span>Reactjs application for managing "Isle of Man TT" races</span>
+							<h3><a href="http://41.225.3.148:8555/#/login">Linesoft</a></h3>
+							<span>React.js application for store management</span>
 						</div>
 					</div>
 				</div>
@@ -444,7 +444,7 @@
 						<div class="text text-center p-4">
 							<h3><a
 									href="https://androidappsapk.co/detail-recette-tunisienne/?fbclid=IwAR34w6-bgqU4vu_ki502LtcckyecZSQaJ1wH4gk_U2WzxWRrW78Ey8HxlK4">
-									Tunisian Recipe</a></h3>
+									Tunisian Recipes</a></h3>
 							<span>Android application for cooking Tunisian recipes</span>
 						</div>
 					</div>
